--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-python-telegram-bot==20.7
 telethon==1.34.0
+python-telegram-bot==20.7
+python-dotenv==1.0.0
 PyPDF2==3.0.1
 python-docx==1.1.0
+pytz==2023.3
+python-dateutil==2.8.2
+requests==2.31.0
+aiohttp==3.9.1
